--- a/SFMLApp/SFMLApp.vcxproj
+++ b/SFMLApp/SFMLApp.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="KeyboardControl.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MapManager.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
@@ -153,6 +154,7 @@
     <ClInclude Include="HelperFunctions.h" />
     <ClInclude Include="KeyboardControl.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="MapManager.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="resource.h" />
