NH - got catsprite to work

--- a/SFMLApp/SFMLApp.vcxproj.filters
+++ b/SFMLApp/SFMLApp.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="MapManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CatSprite.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MapManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CatSprite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
