--- a/SFMLApp/SFMLApp.vcxproj
+++ b/SFMLApp/SFMLApp.vcxproj
@@ -135,6 +135,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animations.cpp" />
+    <ClCompile Include="CatSprite.cpp" />
     <ClCompile Include="Collisions.cpp" />
     <ClCompile Include="DialogueBox.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -148,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animations.h" />
+    <ClInclude Include="CatSprite.h" />
     <ClInclude Include="Collisions.h" />
     <ClInclude Include="DialogueBox.h" />
     <ClInclude Include="Game.h" />
